Added Images and Gifs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,12 +25,13 @@
     </header>
     
     <main>
-        <!-- The background will serve as the image -->
-        <img src="" alt="Image Background" id="background-image">
         <div id="nav-statement">
             <div id="statement-container">
                 <h3>Statement</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sapiente recusandae temporibus optio dolorem ea esse atque amet officiis consequatur rem doloribus enim facilis labore at fuga, sint, voluptatem nemo?</p>
+                <figure>
+                    <img src="img/postino-walk-gif.gif" alt="Image Background">
+                </figure>
             </div>
             <nav>
                 <ul>
