--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,13 @@
         <div id="nav-statement">
             <div id="statement-container">
                 <h3>Statement</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sapiente recusandae temporibus optio dolorem ea esse atque amet officiis consequatur rem doloribus enim facilis labore at fuga, sint, voluptatem nemo?</p>
+                <p>This website contains all assignments created from Web Development II.</p>
+                <p>Columbia Chicago College.</p>
+                <p>Web Development II.</p>
+                <p>SP23-INMD 214-01.</p>
+                <p>Spring 2023.</p>
+                <br>
+                <p>Nehemiah Cedillo</p>
                 <figure>
                     <img src="img/postino-walk-gif.gif" alt="Image Background">
                 </figure>
@@ -37,7 +43,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="bio.html">Bio</a></li>
-                    <li><a href="assignment1/index.html">Assignment 1</a></li>
+                    <li><a href="assignment-1/index.html">Assignment 1</a></li>
                     <li><a href="assignment3/index.html">Assignment 3</a></li>
                     <li><a href="assignment4/index.html">Assignment 4</a></li>
                     <li><a href="assignment5/index.html">Assignment 5</a></li>
