--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
             <div id="statement-container">
                 <h3>Statement</h3>
                 <p>This website contains all assignments created from Web Development II.</p>
-                <p>Columbia Chicago College.</p>
+                <p>Columbia Chicago College</p>
                 <p>Web Development II.</p>
                 <p>SP23-INMD 214-01.</p>
                 <p>Spring 2023.</p>
