Updated CSS - Attempting Menu Border

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 
@@ -25,12 +25,15 @@
 
 
     <section id="menu-section">
-      <div class="menu">
-        <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
-        </figure>
-        <a href="">Link</a>
-      </div>
+        <div class="menu-border">
+          <div class="menu">
+            <figure>
+              <img src="img/smiley.png" alt="" class="menu-image">
+            </figure>
+            <a href="">Link</a>
+          </div>
+        </div>
+      
       <div class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
