CSS Menu and Hover Working
Hover currently working.

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -23,47 +23,45 @@
     <!-- Use the CSS to make images and Clickable Box -->
     <!-- Flexbox Display -->
 
-
     <section id="menu-section">
-        <div class="menu-border">
-          <div class="menu">
-            <figure>
-              <img src="img/smiley.png" alt="" class="menu-image">
-            </figure>
-            <a href="">Link</a>
-          </div>
-        </div>
-      
-      <div class="menu">
+      <!-- Begin Section -->
+      <a href="" class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
         </figure>
-        <a href="">Link</a>
-      </div>
-      <div class="menu">
+      </a>
+      <a href="" class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
         </figure>
-        <a href="">Link</a>
-      </div>
-      <div class="menu">
+      </a>
+      <a href="" class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
         </figure>
-        <a href="">Link</a>
-      </div>
-      <div class="menu">
+      </a>
+      <a href="" class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
         </figure>
-        <a href="">Link</a>
-      </div>
-      <div class="menu">
+      </a>
+      <a href="" class="menu">
         <figure>
           <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
         </figure>
-        <a href="">Link</a>
-      </div>
+      </a>
+      <a href="" class="menu">
+        <figure>
+          <img src="img/smiley.png" alt="" class="menu-image">
+          <p>Title</p>
+        </figure>
+      </a>
+      <!-- Close Section -->
     </section>
 
     <section class="info-section">
@@ -73,7 +71,7 @@
           <p>To provide all the booze available against the 18th Amendment</p>
         </div>
       </section>
-  
+
       <section class="info-background">
         <div class="info-container" id="contact">
           <h2>Contact</h2>
@@ -82,7 +80,7 @@
         </div>
       </section>
     </section>
-    
+
 
   </div><!-- close "container" -->
 
