--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -3,7 +3,6 @@
 <html>
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,8 +15,10 @@
 
 
 <body>
-  <h1>Bootlegger's Menu</h1>
-  <h3>The Underground Haven of Alcohol and Booze</h3>
+  <header>
+    <h1>Bootlegger's Menu</h1>
+    <h3>The Underground Haven of Alcohol and Booze</h3>
+  </header>
 
   <div id="container">
     <!-- Use the CSS to make images and Clickable Box -->
@@ -27,37 +28,37 @@
       <!-- Begin Section -->
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/neat-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/martini-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/champagne-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/beer-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/goblet-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
       <a href="" class="menu">
         <figure>
-          <img src="img/smiley.png" alt="" class="menu-image">
+          <img src="img/wine-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
         </figure>
       </a>
