Additional page added

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <header>
+    
     <h1>Bootlegger's Menu</h1>
     <h3>The Underground Haven of Alcohol and Booze</h3>
   </header>
@@ -26,7 +27,7 @@
 
     <section id="menu-section">
       <!-- Begin Section -->
-      <a href="" class="menu">
+      <a href="page1-rocks.html" class="menu">
         <figure>
           <img src="img/neat-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
@@ -80,6 +81,7 @@
           <p>Email: underground01@scl.global</p>
         </div>
       </section>
+
     </section>
 
 
