--- a/portfolio/assignment-3/page1-rocks.html
+++ b/portfolio/assignment-3/page1-rocks.html
@@ -22,12 +22,15 @@
             <a href="">Scotch</a>
             <a href="">Martini</a>
             <a href="">Champagne</a>
+        </nav>
+        <nav>
             <a href="">Beer</a>
             <a href="">Ales</a>
             <a href="">Wine</a>
         </nav>
     </header>
 
+    <br>
 
     <div id="container">
 
