Added Other pages.

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -27,7 +27,7 @@
 
     <section id="menu-section">
       <!-- Begin Section -->
-      <a href="page1-rocks.html" class="menu">
+      <a href="page1-scotch.html" class="menu">
         <figure>
           <img src="img/neat-glass-empty.png" alt="" class="menu-image">
           <p>Title</p>
