--- a/portfolio/assignment-3/page6-wine.html
+++ b/portfolio/assignment-3/page6-wine.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Rocks</title>
+    <title>Wine</title>
 
-    <link rel="stylesheet" href="css/page1-rocks.css">
+    <link rel="stylesheet" href="css/page6-wine.css">
 
 </head>
 
@@ -19,14 +19,14 @@
         <h1>Bootlegger's Menu</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="">Scotch</a>
-            <a href="">Martini</a>
-            <a href="">Champagne</a>
+            <a href="page1-scotch.html">Scotch</a>
+            <a href="page2-martini.html">Martini</a>
+            <a href="page3-champagne copy.html">Champagne</a>
         </nav>
         <nav>
-            <a href="">Beer</a>
-            <a href="">Ales</a>
-            <a href="">Wine</a>
+            <a href="page4-beer.html">Beer</a>
+            <a href="page5-ale.html">Ales</a>
+            <a href="page6-wine.html">Wine</a>
         </nav>
     </header>
 
@@ -37,8 +37,8 @@
         <!-- Title + Image -->
         <section class="menu">
             <figure>
-                <img src="img/neat-glass-empty.png" alt="">
-                <p id="name">Title</p>
+                <img src="img/wine-glass-empty.png" alt="">
+                <p id="name">Wine   </p>
             </figure>
         </section>
 
