--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    
+
     <h1>Bootlegger's Menu</h1>
     <h3>The Underground Haven of Alcohol and Booze</h3>
   </header>
@@ -30,58 +30,52 @@
       <a href="page1-scotch.html" class="menu">
         <figure>
           <img src="img/neat-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Scotch</p>
         </figure>
       </a>
-      <a href="" class="menu">
+      <a href="page2-martini.html" class="menu">
         <figure>
           <img src="img/martini-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Martinis</p>
         </figure>
       </a>
-      <a href="" class="menu">
+      <a href="page3-champagne copy.html" class="menu">
         <figure>
           <img src="img/champagne-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Champagnes</p>
         </figure>
       </a>
-      <a href="" class="menu">
+      <a href="page4-beer.html" class="menu">
         <figure>
           <img src="img/beer-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Beers</p>
         </figure>
       </a>
-      <a href="" class="menu">
+      <a href="page5-ale.html" class="menu">
         <figure>
           <img src="img/goblet-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Ales</p>
         </figure>
       </a>
-      <a href="" class="menu">
+      <a href="page6-wine.html" class="menu">
         <figure>
           <img src="img/wine-glass-empty.png" alt="" class="menu-image">
-          <p>Title</p>
+          <p>Winery</p>
         </figure>
       </a>
       <!-- Close Section -->
     </section>
 
-    <section class="info-section">
-      <section class="info-background">
-        <div class="info-container" id="mission">
-          <h2>Mission</h2>
-          <p>To provide all the booze available against the 18th Amendment</p>
-        </div>
-      </section>
-
-      <section class="info-background">
-        <div class="info-container" id="contact">
-          <h2>Contact</h2>
-          <p>Phone#: 930-201-1920</p>
-          <p>Email: underground01@scl.global</p>
-        </div>
-      </section>
-
+    <section id="info">
+      <div class="info-section" id="mission-section">
+        <h2>Mission</h2>
+        <p>Provide different types of beverages.</p>
+      </div>
+      <div class="info-section" class="contact-section">
+        <h2>Contacts</h2>
+        <p>Phone#: 999-444-1234</p>
+        <p>bootleg@awol.net</p>
+      </div>
     </section>
 
 
