--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -65,6 +65,9 @@
       </a>
       <!-- Close Section -->
     </section>
+    
+    <div id="radio-border"></div>
+    <div id="radio-box"></div>
 
     <section id="info">
       <div class="info-section" id="mission-section">
@@ -78,7 +81,6 @@
       </div>
     </section>
 
-    <div id="radio-box"></div>
 
 
   </div><!-- close "container" -->
