Edited some text

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -18,7 +18,7 @@
   <header>
 
     <h1>Bootlegger's Menu</h1>
-    <h3>The Underground Haven of Alcohol and Booze</h3>
+    <h3>The Underground Network of Alcohol and Booze in 1920.</h3>
   </header>
 
   <div id="container">
@@ -30,7 +30,7 @@
       <a href="page1-scotch.html" class="menu">
         <figure>
           <img src="img/neat-glass-empty.png" alt="" class="menu-image">
-          <p>Scotch</p>
+          <p>Scotches</p>
         </figure>
       </a>
       <a href="page2-martini.html" class="menu">
@@ -72,7 +72,7 @@
     <section id="info">
       <div class="info-section" id="mission-section">
         <h2>Mission</h2>
-        <p>Provide different types of beverages.</p>
+        <p>Provide different types of beverages, bootlegged and smuggled during the 1920 Prohibition.</p>
       </div>
       <div class="info-section" class="contact-section">
         <h2>Contacts</h2>
