Added some descriptions

--- a/portfolio/assignment-3/index.html
+++ b/portfolio/assignment-3/index.html
@@ -30,7 +30,7 @@
       <a href="page1-scotch.html" class="menu">
         <figure>
           <img src="img/neat-glass-empty.png" alt="" class="menu-image">
-          <p>Scotches</p>
+          <p>Scotch</p>
         </figure>
       </a>
       <a href="page2-martini.html" class="menu">
