--- a/portfolio/assignment-3/page1-scotch.html
+++ b/portfolio/assignment-3/page1-scotch.html
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/neat-glass-empty.png" alt="">
-                <p id="name">Scotch</p>
+                <p id="name">Mr. Portland's Scotch</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>A single malt scotch, made from the underground network of Chicago by a mysterious man named Mr. Portland.</p>
         </section>
 
 
