--- a/portfolio/assignment-3/page2-martini.html
+++ b/portfolio/assignment-3/page2-martini.html
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/martini-glass-empty.png" alt="">
-                <p id="name">Martini</p>
+                <p id="name">The Mystic Martini</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>The Mystical Martini. Made of vodka, bitters, a dash of cointreau, mixed in with cranberry and pinapple juice.</p>
         </section>
 
 
