--- a/portfolio/assignment-3/page3-champagne copy.html
+++ b/portfolio/assignment-3/page3-champagne copy.html
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/champagne-glass-empty.png" alt="">
-                <p id="name">Champagne</p>
+                <p id="name">Clubby Champagne</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>An special kind of champagne. Made in 1915 by Mr.Portland, it is a sweet, blanc champagne with a distinct task of lemon and cranberry.</p>
         </section>
 
 
