--- a/portfolio/assignment-3/page3-champagne.html
+++ b/portfolio/assignment-3/page3-champagne.html
@@ -21,10 +21,10 @@
             <a href="index.html">Home</a>
             <a href="page1-scotch.html">Scotch</a>
             <a href="page2-martini.html">Martini</a>
-            <a href="page3-champagne copy.html">Champagne</a>
+            <a href="page4-beer.html">Beer</a>
         </nav>
         <nav>
-            <a href="page4-beer.html">Beer</a>
+            <a href="page3-champagne.html">Champagne</a>
             <a href="page5-ale.html">Ales</a>
             <a href="page6-wine.html">Wine</a>
         </nav>
