--- a/portfolio/assignment-3/page4-beer.html
+++ b/portfolio/assignment-3/page4-beer.html
@@ -21,10 +21,10 @@
             <a href="index.html">Home</a>
             <a href="page1-scotch.html">Scotch</a>
             <a href="page2-martini.html">Martini</a>
-            <a href="page3-champagne copy.html">Champagne</a>
+            <a href="page4-beer.html">Beer</a>
         </nav>
         <nav>
-            <a href="page4-beer.html">Beer</a>
+            <a href="page3-champagne.html">Champagne</a>
             <a href="page5-ale.html">Ales</a>
             <a href="page6-wine.html">Wine</a>
         </nav>
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/beer-glass-empty.png" alt="">
-                <p id="name">Beer</p>
+                <p id="name">Mr.Portland's Lager</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>A refined Lager Beer, Mr.Portland beer is a bitter, yet smooth tasting beer with a hint of mint. Sparkling light gold in color and low alcohol levels, Mr.Portland does not disappoint.</p>
         </section>
 
 
