--- a/portfolio/assignment-3/page5-ale.html
+++ b/portfolio/assignment-3/page5-ale.html
@@ -21,10 +21,10 @@
             <a href="index.html">Home</a>
             <a href="page1-scotch.html">Scotch</a>
             <a href="page2-martini.html">Martini</a>
-            <a href="page3-champagne copy.html">Champagne</a>
+            <a href="page4-beer.html">Beer</a>
         </nav>
         <nav>
-            <a href="page4-beer.html">Beer</a>
+            <a href="page3-champagne.html">Champagne</a>
             <a href="page5-ale.html">Ales</a>
             <a href="page6-wine.html">Wine</a>
         </nav>
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/goblet-glass-empty.png" alt="">
-                <p id="name">Ale</p>
+                <p id="name">Railroad Ale</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>A light ale. Smooth in taste with the perfect balance of malt, the Railroad Ale will be your number 1 drink.</p>
         </section>
 
 
