--- a/portfolio/assignment-3/page6-wine.html
+++ b/portfolio/assignment-3/page6-wine.html
@@ -21,10 +21,10 @@
             <a href="index.html">Home</a>
             <a href="page1-scotch.html">Scotch</a>
             <a href="page2-martini.html">Martini</a>
-            <a href="page3-champagne copy.html">Champagne</a>
+            <a href="page4-beer.html">Beer</a>
         </nav>
         <nav>
-            <a href="page4-beer.html">Beer</a>
+            <a href="page3-champagne.html">Champagne</a>
             <a href="page5-ale.html">Ales</a>
             <a href="page6-wine.html">Wine</a>
         </nav>
@@ -38,14 +38,13 @@
         <section class="menu">
             <figure>
                 <img src="img/wine-glass-empty.png" alt="">
-                <p id="name">Wine   </p>
+                <p id="name">Mr.Portland's Rose Wine</p>
             </figure>
         </section>
 
         <!-- Description -->
         <section class="menu" id="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod magnam sit repellat quibusdam officia
-                pariatur recusandae alias nobis ipsam eius non porro odit a, veniam at quas. Quod, asperiores modi!</p>
+            <p>A refined Rose Wine, straight from Mr.Portland's homeland. Smooth, dry, and sweet in taste.</p>
         </section>
 
 
@@ -56,7 +55,7 @@
     </div><!-- close "container" -->
 
     <footer>
-        <p>copy@ Nehemiah Cedillo</p>
+        <p>&copy; Nehemiah Cedillo</p>
     </footer>
     <!-- Link to jQuery on Google CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
