--- a/portfolio/assignment-3/page3-champagne.html
+++ b/portfolio/assignment-3/page3-champagne.html
@@ -55,7 +55,7 @@
     </div><!-- close "container" -->
 
     <footer>
-        <p>copy@ Nehemiah Cedillo</p>
+        <p>&copy; Nehemiah Cedillo</p>
     </footer>
     <!-- Link to jQuery on Google CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
