Image Template Created. Some Images Added
Hexel image template created.
Cherry pie and Apple Pie added.

--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -37,11 +37,11 @@
   <div id="container">
     <div id="image-boxes-container">
         <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
+            <img src="img/cherry-pie.png" alt="A pie photo">
+            <figcaption>A Cherry Pie</figcaption>
         </figure>
         <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+            <img src="img/apple-pie.png" alt="A pie photo">
             <figcaption>An Apple Pie</figcaption>
         </figure>
         <figure class="image-box">
