Title being created.

--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -3,24 +3,26 @@
 <html>
 
 <head>
-	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
-	<title>***</title>
-	
-	<link rel="stylesheet" href="css/style.css">	
-	
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>***</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <header>
-    <h1>The Pie Lineup</h1>
-    <h2>A list of Pie Delicacy</h2>
+    <div id="nav-drop-button"><p>test</p></div>
+    <div id="header-title">
+        <h1>The Pie Lineup</h1>
+        <h2>A list of Pie Delicacy</h2>
+    </div>
 </header>
 
 <!-- Drop down navigation -->
-<div id="nav-drop-button"></div>
 <nav>
     <ul>
         <li><a href="">Pie 1</a></li>
@@ -34,65 +36,65 @@
 
 <body>
 
-  <div id="container">
-    <div id="image-boxes-container">
-        <figure class="image-box">
-            <img src="img/cherry-pie.png" alt="A pie photo">
-            <figcaption>A Cherry Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/apple-pie.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-        <figure class="image-box">
-            <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-            <figcaption>An Apple Pie</figcaption>
-        </figure>
-    </div>
+    <div id="container">
+        <div id="image-boxes-container">
+            <figure class="image-box">
+                <img src="img/cherry-pie.png" alt="A pie photo">
+                <figcaption>A Cherry Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/apple-pie.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
+                <figcaption>An Apple Pie</figcaption>
+            </figure>
+        </div>
 
 
 
 
-  </div><!-- close "container" -->
-  
-  <footer>
-    <p>&copy;Nehemiah Cedillo</p>
-  </footer>
+    </div><!-- close "container" -->
 
-  <!-- Link to jQuery on Google CDN-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  
-  
-  <!-- Write your jQuery code inside of the .ready() function below -->
-  <script>
-$(document).ready(function() {
+    <footer>
+        <p>&copy;Nehemiah Cedillo</p>
+    </footer>
+
+    <!-- Link to jQuery on Google CDN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 
+    <!-- Write your jQuery code inside of the .ready() function below -->
+    <script>
+        $(document).ready(function () {
 
 
-}); //close .ready()
-</script>
+
+
+        }); //close .ready()
+    </script>
 
 </body>
-	
-</html> 
+
+</html>
