--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <div id="nav-drop-button"><p>test</p></div>
+    <div id="nav-drop-button"></div>
     <div id="header-title">
         <h1>The Pie Lineup</h1>
         <h2>A list of Pie Delicacy</h2>
@@ -40,35 +40,35 @@
         <div id="image-boxes-container">
             <figure class="image-box">
                 <img src="img/cherry-pie.png" alt="A pie photo">
-                <figcaption>A Cherry Pie</figcaption>
+                <figcaption>Cherry Pie</figcaption>
             </figure>
             <figure class="image-box">
                 <img src="img/apple-pie.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <figcaption>Apple Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/banana-pie.png" alt="A pie photo">
+                <figcaption>Banana Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/cookies-and-cream-pie.png" alt="A pie photo">
+                <figcaption>Cookies-n-Cream Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/cranberry-pie.png" alt="A pie photo">
+                <figcaption>Cranberry Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/blueberry-pie.png" alt="A pie photo">
+                <figcaption>Blueberry Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/pecan-pie.png" alt="A pie photo">
+                <figcaption>Pecan Pie</figcaption>
             </figure>
             <figure class="image-box">
-                <img src="img/hexel-files/pie-template.png" alt="A pie photo">
-                <figcaption>An Apple Pie</figcaption>
+                <img src="img/pumpkin-pie.png" alt="A pie photo">
+                <figcaption>Pumpkin Pie</figcaption>
             </figure>
         </div>
 
