--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <header>
-    <div id="nav-drop-button"></div>
     <div id="header-title">
         <h1>The Pie Lineup</h1>
         <h2>A list of Pie Delicacy</h2>
@@ -23,16 +22,23 @@
 </header>
 
 <!-- Drop down navigation -->
-<nav>
-    <ul>
-        <li><a href="">Pie 1</a></li>
-        <li><a href="">Pie 2</a></li>
-        <li><a href="">Pie 3</a></li>
-        <li><a href="">Pie 4</a></li>
-        <li><a href="">Pie 5</a></li>
-        <li><a href="">Pie 6</a></li>
-    </ul>
-</nav>
+<div id="nav-container">
+    <div id="nav-drop-button"></div>
+    <nav>
+        <h3>Types of Pie</h3>
+        <ul>
+            <li><a href="">Pie 1</a></li>
+            <li><a href="">Pie 2</a></li>
+            <li><a href="">Pie 3</a></li>
+            <li><a href="">Pie 4</a></li>
+            <li><a href="">Pie 5</a></li>
+            <li><a href="">Pie 6</a></li>
+        </ul>
+    </nav>
+</div>
+
+
+
 
 <body>
 
@@ -50,7 +56,7 @@
                 <img src="img/banana-pie.png" alt="A pie photo">
                 <figcaption>Banana Pie</figcaption>
             </figure>
-            <figure class="image-box">
+            <figure class="image-box" id="cookies-n-cream-box">
                 <img src="img/cookies-and-cream-pie.png" alt="A pie photo">
                 <figcaption>Cookies-n-Cream Pie</figcaption>
             </figure>
