Animations Added. Incomplete

--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -44,37 +44,55 @@
 
     <div id="container">
         <div id="image-boxes-container">
-            <figure class="image-box">
-                <img src="img/cherry-pie.png" alt="A pie photo">
-                <figcaption>Cherry Pie</figcaption>
+
+
+            <figure class="image-box" id="cherry-pie-box">
+                <a href="">
+                    <img src="img/cherry-pie.png" alt="A pie photo">
+                    <figcaption>Cherry Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/apple-pie.png" alt="A pie photo">
-                <figcaption>Apple Pie</figcaption>
+            <figure class="image-box" id="apple-pie-box">
+                <a href="">
+                    <img src="img/apple-pie.png" alt="A pie photo">
+                    <figcaption>Apple Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/banana-pie.png" alt="A pie photo">
-                <figcaption>Banana Pie</figcaption>
+            <figure class="image-box" id="banana-pie-box">
+                <a href="">
+                    <img src="img/banana-pie.png" alt="A pie photo">
+                    <figcaption>Banana Pie</figcaption>
+                </a>
             </figure>
             <figure class="image-box" id="cookies-n-cream-box">
-                <img src="img/cookies-and-cream-pie.png" alt="A pie photo">
-                <figcaption>Cookies-n-Cream Pie</figcaption>
+                <a href="">
+                    <img src="img/cookies-and-cream-pie.png" alt="A pie photo">
+                    <figcaption>Cookies-n-Cream Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/cranberry-pie.png" alt="A pie photo">
-                <figcaption>Cranberry Pie</figcaption>
+            <figure class="image-box" id="cranberry-pie-box">
+                <a href="">
+                    <img src="img/cranberry-pie.png" alt="A pie photo">
+                    <figcaption>Cranberry Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/blueberry-pie.png" alt="A pie photo">
-                <figcaption>Blueberry Pie</figcaption>
+            <figure class="image-box" id="blueberry-pie-box">
+                <a href="">
+                    <img src="img/blueberry-pie.png" alt="A pie photo">
+                    <figcaption>Blueberry Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/pecan-pie.png" alt="A pie photo">
-                <figcaption>Pecan Pie</figcaption>
+            <figure class="image-box" id="pecan-pie-box">
+                <a href="">
+                    <img src="img/pecan-pie.png" alt="A pie photo">
+                    <figcaption>Pecan Pie</figcaption>
+                </a>
             </figure>
-            <figure class="image-box">
-                <img src="img/pumpkin-pie.png" alt="A pie photo">
-                <figcaption>Pumpkin Pie</figcaption>
+            <figure class="image-box" id="pumpkin-pie-box">
+                <a href="">
+                    <img src="img/pumpkin-pie.png" alt="A pie photo">
+                    <figcaption>Pumpkin Pie</figcaption>
+                </a>
             </figure>
         </div>
 
