--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -45,55 +45,60 @@
     <div id="container">
         <div id="image-boxes-container">
 
-
-            <figure class="image-box" id="cherry-pie-box">
-                <a href="">
+            <a href="#" class="image-box" id="cherry-pie-box">
+                <figure>
                     <img src="img/cherry-pie.png" alt="A pie photo">
                     <figcaption>Cherry Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="apple-pie-box">
-                <a href="">
+                </figure>
+            </a>
+
+            <a href="#" class="image-box" id="apple-pie-box">
+                <figure>
                     <img src="img/apple-pie.png" alt="A pie photo">
                     <figcaption>Apple Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="banana-pie-box">
-                <a href="">
+                </figure>
+            </a>
+
+            <a href="#" class="image-box" id="banana-pie-box">
+                <figure>
                     <img src="img/banana-pie.png" alt="A pie photo">
                     <figcaption>Banana Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="cookies-n-cream-box">
-                <a href="">
+                </figure>
+            </a>
+
+            <a href="#" class="image-box" id="cookies-n-cream-box">
+                <figure>
                     <img src="img/cookies-and-cream-pie.png" alt="A pie photo">
                     <figcaption>Cookies-n-Cream Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="cranberry-pie-box">
-                <a href="">
+                </figure>
+
+            </a>
+            <a href="#" class="image-box" id="cranberry-pie-box">
+                <figure>
                     <img src="img/cranberry-pie.png" alt="A pie photo">
                     <figcaption>Cranberry Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="blueberry-pie-box">
-                <a href="">
+                </figure>
+            </a>
+
+            <a href="#" class="image-box" id="blueberry-pie-box">
+                <figure>
                     <img src="img/blueberry-pie.png" alt="A pie photo">
                     <figcaption>Blueberry Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="pecan-pie-box">
-                <a href="">
+                </figure>
+            </a>
+
+            <a href="#" class="image-box" id="pecan-pie-box">
+                <figure>
                     <img src="img/pecan-pie.png" alt="A pie photo">
                     <figcaption>Pecan Pie</figcaption>
-                </a>
-            </figure>
-            <figure class="image-box" id="pumpkin-pie-box">
-                <a href="">
+                </figure>
+            </a>
+            <a href="#" class="image-box" id="pumpkin-pie-box">
+                <figure>
                     <img src="img/pumpkin-pie.png" alt="A pie photo">
                     <figcaption>Pumpkin Pie</figcaption>
-                </a>
-            </figure>
+                </figure>
+            </a>
         </div>
 
 
