--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -45,7 +45,7 @@
     <div id="container">
         <div id="image-boxes-container">
 
-            <a href="" class="image-box" id="cherry-pie-box">
+            <a href="iecka.html" class="image-box" id="cherry-pie-box">
                 <figure>
                     <img src="img/cherry-pie.png" alt="A pie photo">
                     <figcaption>Cherry Pie</figcaption>
