All separate animations added.

--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -101,6 +101,9 @@
             </a>
         </div>
 
+        <section class="info-section">
+            <div class="info-box"></div>
+        </section>
 
 
 
