Color transitions added

--- a/portfolio/assignment-4/index.html
+++ b/portfolio/assignment-4/index.html
@@ -110,7 +110,13 @@
     </div><!-- close "container" -->
 
     <footer>
-        <p>&copy;Nehemiah Cedillo</p>
+        <section id="footer-info">
+            <p>Copyright &copy; 2023 Nehemiah Cedillo</p>
+        <h4>Disclaimer:</h4>
+        <p>Not really about pies</p>
+        <p>Images may cause vertigo</p>
+        <p>Color changes presented in website</p>
+        </section>
     </footer>
 
     <!-- Link to jQuery on Google CDN-->
