--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -23,7 +23,7 @@
     </header>
   <div id="container">
 
-    <img src="" alt="image-here" id="banner">
+    <img src="img/hub-world-gif.gif" alt="image-here" id="banner">
 
     <div id="hidden-content">
         <div class="content-container" id="arcade-container">
