--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -3,15 +3,15 @@
 <html>
 
 <head>
-	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
-	<title>***</title>
-	
-	<link rel="stylesheet" href="css/style.css">	
-	
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>***</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 
@@ -21,41 +21,49 @@
         <h1>Hub World</h1>
         <h2>A brief demonstration of Hub World</h2>
     </header>
-  <div id="container">
+    <div id="container">
 
-    <img src="img/hub-world-gif.gif" alt="image-here" id="banner">
+        <figure id="banner">
+            <img src="img/hub-world-gif.gif" alt="image-here">
+        </figure>
 
-    <div id="hidden-content">
-        <div class="content-container" id="arcade-container">
-            <button id="arcade-button"></button>
-            <img src="" alt="arcade-gifs" id="arcade-image">
+        <div id="hidden-content">
+            <div class="content-container" id="arcade-container">
+                <button id="arcade-button"></button>
+                <figure id="arcade-image">
+                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
+                </figure>
+            </div>
+            <div class="content-container" id="audio-container">
+                <button id="audio-button"></button>
+                <figure id="audio-player">
+                    <audio src=""></audio>
+                </figure>
+            </div>
+            <div class="content-container" id="npc-container">
+                <button id="npc-button"></button>
+                <figure id="npc-image">
+                    <img src="img/frogger-skeletons.gif" alt="npc-gif">
+                </figure>
+            </div>
         </div>
-        <div class="content-container" id="audio-container">
-            <button id="audio-button"></button>
-            <audio src="" id="audio-player"></audio>
-        </div>
-        <div class="content-container" id="npc-container">
-            <button id="npc-button"></button>
-            <img src="" alt="npc-gif" id="npc-image">
-        </div>
-    </div>
 
-  </div><!-- close "container" -->
-  
-  <!-- Link to jQuery on Google CDN-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  
-  
-  <!-- Write your jQuery code inside of the .ready() function below -->
-  <script>
-$(document).ready(function() {
+    </div><!-- close "container" -->
+
+    <!-- Link to jQuery on Google CDN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+
+    <!-- Write your jQuery code inside of the .ready() function below -->
+    <script>
+        $(document).ready(function () {
 
 
 
 
-}); //close .ready()
-</script>
+        }); //close .ready()
+    </script>
 
 </body>
-	
-</html> 
+
+</html>
