--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -30,21 +30,27 @@
         <div id="hidden-content">
             
             <div class="content-container" id="arcade-container">
-                <button id="arcade-button"></button>
-                <figure id="arcade-image">
+                <button id="arcade-button">View Arcade Machines</button>
+                <figure id="arcade-images">
+                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
+                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
+                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
+                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
                     <img src="img/platformer-arcade.gif" alt="arcade-gifs">
                 </figure>
             </div>
 
             <div class="content-container" id="audio-container">
-                <button id="audio-button"></button>
+                <button id="audio-button">Click Me!</button>
                 <figure id="audio-player">
                     <audio src=""></audio>
                 </figure>
             </div>
             <div class="content-container" id="npc-container">
-                <button id="npc-button"></button>
+                <button id="npc-button">View NPCs</button>
                 <figure id="npc-image">
+                    <img src="img/frogger-skeletons.gif" alt="npc-gif">
+                    <img src="img/frogger-skeletons.gif" alt="npc-gif">
                     <img src="img/frogger-skeletons.gif" alt="npc-gif">
                 </figure>
             </div>
