--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <h1>Hub World</h1>
+        <h1> - Hub World - </h1>
         <h2>A brief demonstration of Hub World</h2>
     </header>
     <div id="container">
