--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -33,10 +33,9 @@
                 <button id="arcade-button">View Arcade Machines</button>
                 <figure id="arcade-images">
                     <img src="img/platformer-arcade.gif" alt="arcade-gifs">
-                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
-                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
-                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
-                    <img src="img/platformer-arcade.gif" alt="arcade-gifs">
+                    <img src="img/frogger-arcade.gif" alt="arcade-gifs">
+                    <img src="img/pac-man-arcade.gif" alt="arcade-gifs">
+                    <img src="img/pong-arcade.gif" alt="arcade-gifs">
                 </figure>
             </div>
 
