--- a/portfolio/assignment-5/index.html
+++ b/portfolio/assignment-5/index.html
@@ -65,6 +65,9 @@
         </div>
 
     </div><!-- close "container" -->
+    <footer>
+        <p>&copy; Nehemiah Cedillo 2023 </p>
+    </footer>
 
     <!-- Link to jQuery on Google CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
