--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,7 @@
                     <li><a href="assignment-4/index.html">Assignment 4</a></li>
                     <li><a href="assignment-5/index.html">Assignment 5</a></li>
                     <li><a href="assignment-6/index.html">Assignment 6</a></li>
-                    <li><a href="final-project/docs/">Topic Proposal</a></li>
+                    <li><a href="final-project/docs/topic-proposal.pdf">Topic Proposal</a></li>
                     <li><a href="final-project/docs/">Research Interviews</a></li>
                     <li><a href="final-project/docs/">Creative Exploration</a></li>
                     <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
