--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
                     <li><a href="assignment-5/index.html">Assignment 5</a></li>
                     <li><a href="assignment-6/index.html">Assignment 6</a></li>
                     <li><a href="final-project/docs/topic-proposal.pdf">Topic Proposal</a></li>
-                    <li><a href="final-project/docs/">Research Interviews</a></li>
+                    <li><a href="final-project/docs/daniel-george_interview.pdf">Research Interviews</a></li>
                     <li><a href="final-project/docs/">Creative Exploration</a></li>
                     <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
                     <li><a href="final-project/docs/">Reflection</a></li>
